# isImgScrapPy-core

./: pyproject.toml
isImgScrapPy/core/: __about__.py  __init__.py
isImgScrapPy/core/config/: __init__.py  cache.py
isImgScrapPy/core/errors/: __init__.py
isImgScrapPy/core/images/: __init__.py
isImgScrapPy/core/tools/: decorators.py  dupes.py  errors.py  hashes.py
isImgScrapPy/core/tools/progress/: __init__.py
isImgScrapPy/core/tools/web/: __init__.py  errors.py
